# trader-intelligence-ai-copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
data/evaluation/: answer_cases.json  golden_cases.json  retrieval_cases.json
docs/architecture/: CHATGPT_PROJECT_CONTEXT.md  Trader Intelligence AI Copilot - Project Structure.md
docs/project_info_doc/: 01_configuration-guide.md  01_fastapi_llm_foundation.md  02_embedding_layer.md  03_vector_store.md  04_retrieval_layer.md  06_context_builder.md
migrations/: env.py
migrations/versions/: 001_create_authentication_tables.py  002_remove_risk_manager_role.py  003_create_trader_metrics.py  004_create_conversation_memory.py
scripts/: bootstrap_development_users.py  evaluate.py  evaluate_answers.py  evaluate_langsmith.py  evaluate_retrieval.py  evaluate_semantic.py  generate_evaluation_predictions.py  ingest.py  test_context_builder.py  test_embeddings.py  test_prompt.py  test_retrieval.py  verify_hybrid_chat.py  verify_trader_repository.py
tests/: conftest.py
tests/api/: test_personalized_chat.py
tests/application/: test_hybrid_chat_service.py  test_memory_chat_service.py
tests/chat/: test_hybrid_context_builder.py
tests/evaluation/: test_answer_quality.py  test_evaluation_runner.py  test_langsmith_adapter.py  test_prediction_runner.py  test_retrieval_metrics.py  test_semantic_judge.py
tests/guardrails/: test_guardrails.py
tests/observability/: test_observability.py
tests/orchestration/: test_trader_graph.py
tests/prompts/: test_hybrid_rag_prompt.py  (+1 more)
(+100 files in other folders)
