[project]
name = "trader-intelligence-ai-copilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt<5",
    "chromadb>=1.5.9",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "langchain>=1.3.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langgraph>=1.2.9",
    "loguru>=0.7.3",
    "mlflow>=1.27.0",
    "numpy>=2.4.6",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
    "orjson>=3.11.9",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.51",
    "tiktoken>=0.13.0",
    "unstructured>=0.24.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "mypy>=2.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trader_intelligence_ai_copilot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
